--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: 'eightbit', sans-serif;
     height: 100vh;
     width: 100vw;
-    background-color: black; /* Fallback background color */
+    background-color: black;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: black; /* Fallback background color */
+    background-color: black;
 }
 
 .background-container {
@@ -277,4 +277,44 @@ body {
     width: 100%;
     height: 100%;
     cursor: pointer;
+}
+
+#preview-container .analyse-button,
+#preview-container .clear-button {
+    display: none;
+    position: absolute;
+    padding: 6px 12px;
+    font-family: 'eightbit';
+    font-size: 40px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+#preview-container .analyse-button {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: green;
+    color: white;
+}
+
+#preview-container .clear-button {
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    background-color: #c22317;
+}
+
+#preview-container:hover .preview-image.has-image {
+    filter: grayscale(50%);
+}
+
+#preview-container:hover .analyse-button,
+#preview-container:hover .clear-button {
+    display: inline-block;
 }
