--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -59,16 +59,44 @@ body {
 .diary-button {
     position: absolute;
     top: 10px;
-    left: 20px;
+    left: 15px;
     width: 100px;
     height: 100px;
     z-index: 2;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .diary-icon {
     width: 100%;
     height: 100%;
 }
+
+.diary-modal {
+    display: none;
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.diary-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+    text-align: center;
+}
+
 
 .menu-button {
     position: absolute;
@@ -205,6 +233,14 @@ body {
 }
 
 .close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.diary-close-button {
     color: #aaa;
     float: right;
     font-size: 28px;
