--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -102,7 +102,7 @@ body {
     position: absolute;
     top: 10px;
     right: 20px;
-    width: 150px;
+    width: 200px;
     height: 70px;
     border-radius: 20px;
     background-color: white;
@@ -248,6 +248,15 @@ body {
     cursor: pointer;
 }
 
+.diary-preview-image {
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    filter: grayscale(100%);
+}
+
 .close-button:hover,
 .close-button:focus {
     color: black;
@@ -353,4 +362,39 @@ body {
 #preview-container:hover .analyse-button,
 #preview-container:hover .clear-button {
     display: inline-block;
+}
+
+.username-modal {
+    display: none;
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.username-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.username-button {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+    text-align: center;
 }
