--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -97,23 +97,34 @@ body {
     text-align: center;
 }
 
-
-.menu-button {
+.username-display-container {
     position: absolute;
     top: 10px;
     right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    z-index: 2;
+}
+
+.username-display {
+    font-size: 24px;
+    color: white;
+    font-family: 'eightbit';
+    margin-bottom: 10px;
+}
+
+.change-user-button {
     width: 200px;
-    height: 70px;
     border-radius: 20px;
     background-color: white;
     border: none;
-    padding: 20px;
-    font-size: 30px;
+    padding: 12px;
+    font-size: 20px;
     font-weight: bold;
     color: black;
     cursor: pointer;
     font-family: 'eightbit';
-    z-index: 2;
 }
 
 .music-button-container {
@@ -397,4 +408,30 @@ body {
     max-width: 500px;
     border-radius: 10px;
     text-align: center;
+}
+
+.username-input {
+    font-family: 'eightbit';
+    font-size: 40px;
+    padding: 10px;
+    border: 2px solid #007bff;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 400px;
+    margin-bottom: 20px;
+}
+
+.submit-button {
+    background-color: #007bff;
+    border: none;
+    padding: 20px;
+    border-radius: 25px;
+    width: 200px;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    font-family: 'eightbit';
+    display: none;
+    margin: 0 auto;
 }
