--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -106,11 +106,12 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 300px;
+    height: auto;
     border: 2px dashed #aaa;
     padding: 20px;
     position: relative;
     background-color: #f0f0f0;
+    overflow: hidden;
 }
 
 .diary-preview-image {
@@ -159,6 +160,20 @@ body {
     background-color: #ddd;
     cursor: pointer;
 }
+
+#diary-results-container p {
+    font-family: 'eightbit';
+    margin: 10px 0;
+  }
+
+  #diary-results-container p:first-child {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  #diary-results-container p:nth-child(2) {
+    font-size: 16px;
+  }
 
 .diary-navigation {
     display: flex;
@@ -299,7 +314,6 @@ body {
     height: 200px;
 }
 
-/* Modal Styles */
 .modal {
     display: none;
     position: fixed;
@@ -322,6 +336,10 @@ body {
     max-width: 500px;
     border-radius: 10px;
     text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .close-button {
@@ -364,10 +382,19 @@ body {
 }
 
 #preview-container {
-    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: auto;
     border: 2px dashed #007bff;
     padding: 20px;
     position: relative;
+    background-color: #f0f0f0;
+    overflow: hidden;
+    box-sizing: border-box;
+    margin-top: 20px;
 }
 
 .drag-and-drop {
@@ -380,9 +407,10 @@ body {
 }
 
 .preview-image {
-    max-width: 100%;
+    width: auto;
     height: auto;
-    border: 1px solid #ddd;
+    max-width: 100%;
+    max-height: 100%;
     border-radius: 4px;
     padding: 5px;
     filter: grayscale(100%);
@@ -452,6 +480,11 @@ body {
     top: 20px;
     color: white;
     font-size: smaller;
+    font-family: 'eightbit', sans-serif;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
 }
 
 .username-modal {
@@ -514,3 +547,30 @@ body {
     display: none;
     margin: 0 auto;
 }
+
+.live-clock {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-family: 'eightbit', sans-serif;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+.version-info {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-family: 'eightbit', sans-serif;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
